// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`IntegrationsCard snapshots not-connected state matches snapshot 1`] = `
"<div data-test-id="integrations-card" class="rounded-xl border border-[var(--line)] bg-[var(--panel)] p-5">
  <h2 class="text-sm font-semibold text-[var(--ink)]">Integrations</h2><!-- Loading -->
  <!-- Not connected -->
  <div data-test-id="integrations-not-connected" class="mt-4">
    <p class="text-sm text-[var(--ink-3)]">No Shopify store connected.</p>
    <div class="mt-3"><button data-test-id="integrations-connect-btn" class="rounded-lg bg-[var(--accent)] px-4 py-2 text-sm font-medium text-[var(--accent-ink)] transition-colors hover:bg-[var(--accent-2)]"> Connect Shopify </button></div>
  </div>
</div>"
`;

exports[`IntegrationsCard snapshots connected state matches snapshot 1`] = `
"<div data-test-id="integrations-card" class="rounded-xl border border-[var(--line)] bg-[var(--panel)] p-5">
  <h2 class="text-sm font-semibold text-[var(--ink)]">Integrations</h2><!-- Loading -->
  <!-- Connected -->
  <div data-test-id="integrations-connected" class="mt-4">
    <div class="flex items-center gap-2"><svg width="14" height="14" class="text-[var(--accent)]" aria-hidden="true" data-icon="check-circle"></svg><span data-test-id="integrations-shop-domain" class="text-sm font-medium text-[var(--ink)]">acme.myshopify.com</span></div>
    <p data-test-id="integrations-last-sync" class="mt-1 text-xs text-[var(--ink-3)]">Never synced</p><!-- Sync progress -->
    <!--v-if-->
    <!-- Sync error -->
    <!--v-if-->
    <div class="mt-3 flex items-center gap-3"><button data-test-id="integrations-disconnect-btn" class="text-xs text-[var(--ink-3)] underline transition-colors hover:text-[var(--ink-2)] disabled:opacity-50">Disconnect</button><span class="text-xs text-[var(--ink-3)]">|</span><button data-test-id="integrations-refresh-btn" class="text-xs text-[var(--ink-3)] underline transition-colors hover:text-[var(--ink)] disabled:opacity-50">Refresh now</button><span class="text-xs text-[var(--ink-3)]">|</span><a data-test-id="integrations-settings-link" class="text-xs text-[var(--ink-3)] underline hover:text-[var(--ink)]"> Settings </a></div>
  </div>
</div>"
`;

exports[`IntegrationsCard snapshots reauthorize state matches snapshot 1`] = `
"<div data-test-id="integrations-card" class="rounded-xl border border-[var(--line)] bg-[var(--panel)] p-5">
  <h2 class="text-sm font-semibold text-[var(--ink)]">Integrations</h2><!-- Loading -->
  <!-- Reauthorize -->
  <div data-test-id="integrations-reauthorize" class="mt-4">
    <div class="rounded-lg border border-[var(--line)] bg-[var(--fill)] p-3">
      <div class="flex items-start gap-2"><svg width="14" height="14" class="mt-0.5 shrink-0 text-[var(--ink-2)]" aria-hidden="true" data-icon="alert-triangle"></svg>
        <div>
          <p class="text-sm font-medium text-[var(--ink)]">Shopify needs to be reauthorized</p>
          <p data-test-id="integrations-reauth-domain" class="mt-0.5 text-xs text-[var(--ink-3)]">pending.myshopify.com</p>
        </div>
      </div><button data-test-id="integrations-reauthorize-btn" class="mt-3 rounded-lg bg-[var(--accent)] px-4 py-2 text-sm font-medium text-[var(--accent-ink)] transition-colors hover:bg-[var(--accent-2)]"> Reauthorize </button>
    </div>
  </div>
</div>"
`;

exports[`IntegrationsCard snapshots running state matches snapshot 1`] = `
"<div data-test-id="integrations-card" class="rounded-xl border border-[var(--line)] bg-[var(--panel)] p-5">
  <h2 class="text-sm font-semibold text-[var(--ink)]">Integrations</h2><!-- Loading -->
  <!-- Connected -->
  <div data-test-id="integrations-connected" class="mt-4">
    <div class="flex items-center gap-2"><svg width="14" height="14" class="text-[var(--accent)]" aria-hidden="true" data-icon="check-circle"></svg><span data-test-id="integrations-shop-domain" class="text-sm font-medium text-[var(--ink)]">acme.myshopify.com</span></div>
    <p data-test-id="integrations-last-sync" class="mt-1 text-xs text-[var(--ink-3)]">Never synced</p><!-- Sync progress -->
    <div data-test-id="integrations-sync-progress" class="mt-2 flex items-center gap-2 text-xs text-[var(--ink-3)]">
      <div class="size-3 animate-spin rounded-full border-2 border-[var(--line)] border-t-[var(--accent)]"></div><span>Syncing your products…</span>
    </div><!-- Sync error -->
    <!--v-if-->
    <div class="mt-3 flex items-center gap-3"><button data-test-id="integrations-disconnect-btn" class="text-xs text-[var(--ink-3)] underline transition-colors hover:text-[var(--ink-2)] disabled:opacity-50">Disconnect</button><span class="text-xs text-[var(--ink-3)]">|</span><button data-test-id="integrations-refresh-btn" class="text-xs text-[var(--ink-3)] underline transition-colors hover:text-[var(--ink)] disabled:opacity-50" disabled="">Syncing…</button><span class="text-xs text-[var(--ink-3)]">|</span><a data-test-id="integrations-settings-link" class="text-xs text-[var(--ink-3)] underline hover:text-[var(--ink)]"> Settings </a></div>
  </div>
</div>"
`;

exports[`IntegrationsCard snapshots parsing state matches snapshot 1`] = `
"<div data-test-id="integrations-card" class="rounded-xl border border-[var(--line)] bg-[var(--panel)] p-5">
  <h2 class="text-sm font-semibold text-[var(--ink)]">Integrations</h2><!-- Loading -->
  <!-- Connected -->
  <div data-test-id="integrations-connected" class="mt-4">
    <div class="flex items-center gap-2"><svg width="14" height="14" class="text-[var(--accent)]" aria-hidden="true" data-icon="check-circle"></svg><span data-test-id="integrations-shop-domain" class="text-sm font-medium text-[var(--ink)]">acme.myshopify.com</span></div>
    <p data-test-id="integrations-last-sync" class="mt-1 text-xs text-[var(--ink-3)]">Never synced</p><!-- Sync progress -->
    <div data-test-id="integrations-sync-progress" class="mt-2 flex items-center gap-2 text-xs text-[var(--ink-3)]">
      <div class="size-3 animate-spin rounded-full border-2 border-[var(--line)] border-t-[var(--accent)]"></div><span> Syncing… 150 / 300</span>
    </div><!-- Sync error -->
    <!--v-if-->
    <div class="mt-3 flex items-center gap-3"><button data-test-id="integrations-disconnect-btn" class="text-xs text-[var(--ink-3)] underline transition-colors hover:text-[var(--ink-2)] disabled:opacity-50">Disconnect</button><span class="text-xs text-[var(--ink-3)]">|</span><button data-test-id="integrations-refresh-btn" class="text-xs text-[var(--ink-3)] underline transition-colors hover:text-[var(--ink)] disabled:opacity-50" disabled="">Syncing…</button><span class="text-xs text-[var(--ink-3)]">|</span><a data-test-id="integrations-settings-link" class="text-xs text-[var(--ink-3)] underline hover:text-[var(--ink)]"> Settings </a></div>
  </div>
</div>"
`;
